--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+/* font family */
 @import url('https://fonts.googleapis.com/css?family=Karla:400|DM+Serif+Display:400');
 
 *,
@@ -130,6 +131,123 @@ ul {
   padding: 0;
 }
 
+.img {
+  width: 100%;
+  display: block;
+  object-fit: cover;
+}
+/* buttons */
+.btn {
+  cursor: pointer;
+  color: var(--white);
+  background: var(--primaryColor);
+  border: transparent;
+  border-radius: var(--border-radius);
+  letter-spacing: var(--letter-spacing);
+  padding: 0.375rem 0.75rem;
+  box-shadow: var(--shadow-1);
+  transition: var(--transition);
+  text-transform: capitalize;
+  display: inline-block;
+}
+
+.btn:hover {
+  background: var(--primary-700);
+  box-shadow: var(--shadow-3);
+}
+.btn-hipster {
+  color: var(--primaryColor);
+  background: var(--primary-200);
+}
+.btn-hipster:hover {
+  color: var(--primary200);
+  background: var(--primary-700);
+}
+.btn-block {
+  width: 100%;
+}
+/* alerts */
+.alert {
+  padding: 0.375rem 0.75rem;
+  margin-bottom: 1rem;
+  border-color: transparent;
+  border-radius: var(--border-radius);
+}
+.alert-danger {
+  color: var(--red-dark);
+  background: var(--red-light);
+}
+.alert-success {
+  color: var(--green-dark);
+  background: var(--green-light);
+}
+
+/* form */
+
+.form {
+  width: 90vw;
+  max-width: var(--fixed-width);
+  background: var(--white);
+  border-radius: var(--border-radius);
+  box-shadow: var(--shadow-2);
+  padding: 2rem 2.5rem;
+  margin: 3rem auto;
+}
+.form-label {
+  display: block;
+  font-size: var(--smallText);
+  margin-bottom: 0.5rem;
+  text-transform: capitalize;
+  letter-spacing: var(--letter-spacing);
+}
+.form-input,
+.form-textarea {
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  border-radius: var(--border-radius);
+  background: var(--backgroundColor);
+  border: 1px solid var(--gray-200);
+}
+.form-row {
+  margin-bottom: 1rem;
+}
+.form-textarea {
+  height: 7rem;
+}
+.form-alert {
+  color: var(--red-dark);
+  letter-spacing: var(--letter-spacing);
+  text-transform: capitalize;
+}
+::placeholder {
+  font-family: inherit;
+  color: var(--gray-400);
+}
+
+/* title */
+.title {
+  text-align: center;
+}
+.title-underline {
+  background: var(--primaryColor);
+  width: 7rem;
+  height: 0.25rem;
+  margin: 0 auto;
+}
+/* loading */
+@keyframes spinner {
+  to {
+    transform: rotate(360deg);
+  }
+}
+.loading {
+  height: 6rem;
+  width: 6rem;
+  border: 1px solid var(--gray-300);
+  border-radius: 50%;
+  border-top-color: var(--primary-400);
+  animation: spinner 0.6s linear infinite;
+}
 .section-center {
   width: 90vw;
   max-width: var(--max-width);
